# rust-fullstack-web-app

./: .gitignore  Makefile  README.md
backend/: .env  Cargo.toml  Makefile
backend/migrations/2022-07-02-132457_create_todos/: up.sql
backend/src/: main.rs  schema.rs
backend/src/root/todo/: entities.rs  factory.rs  repository.rs  service.rs
backend/src/todo/: entities.rs  mod.rs  repository.rs  resolver.rs  service.rs
frontend/: .env  Cargo.toml  Makefile
frontend/src/: main.rs
frontend/src/graphql/: create_todo.rs  get_todos.rs  mod.rs  schema.graphql
frontend/src/graphql/schema/: get_todos.graphql
frontend/src/graphql/todo/: complete_todo.graphql  complete_todo.rs  create_todo.graphql  get_todos.rs  incomplete_todo.graphql  incomplete_todo.rs  mod.rs
frontend/src/root/todo/: entities.rs  mod.rs  queries.rs  repository.rs
frontend/src/root/todo/components/: mod.rs  todo_card.rs
