[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["sqlite"] }
async-graphql = "4"
async-graphql-actix-web = "4"
actix-web = "4"
once_cell = "1"
dotenv = "0.15"